--- a/ProyectoPOO/nbproject/project.properties
+++ b/ProyectoPOO/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoPOO
-main.class=proyectopoo.ProyectoPOO
+main.class=app.app
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
