--- a/ProyectoPOO/nbproject/project.properties
+++ b/ProyectoPOO/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoPOO
 excludes=
 file.reference.sqljdbc4.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=C:\\Users\\manue\\Documents\\PrograsPOO\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.sqljdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
