--- a/ProyectoPOO/nbproject/private/private.properties
+++ b/ProyectoPOO/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\manue\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.sqljdbc4.jar-1=C:\\Users\\XT\\Desktop\\JAVA_driver\\sqljdbc4.jar
+user.properties.file=C:\\Users\\XT\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
