--- a/ProyectoPOO/nbproject/project.properties
+++ b/ProyectoPOO/nbproject/project.properties
@@ -33,6 +33,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoPOO
 excludes=
+file.reference.itext-5.0.5.jar=C:\\Users\\manue\\Documents\\PrograsPOO\\itext-5.0.5.jar
+file.reference.javax.activation-1.2.0.jar=C:\\Users\\manue\\Documents\\PrograsPOO\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=C:\\Users\\manue\\Documents\\PrograsPOO\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\calendar\\lib\\jcalendar-1.4.jar
 file.reference.sqljdbc4.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\sqljdbc4.jar
 file.reference.sqljdbc4.jar-1=C:\\Users\\manue\\Documents\\PrograsPOO\\sqljdbc4.jar
@@ -41,7 +44,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.sqljdbc4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.itext-5.0.5.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
