--- a/ProyectoPOO/nbproject/private/private.properties
+++ b/ProyectoPOO/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
+file.reference.itext-5.0.5.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\itext-5.0.5.jar
+file.reference.javax.activation-1.2.0.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=C:\\Users\\XT\\Desktop\\JAVA_driver\\javax.mail.jar
 file.reference.sqljdbc4.jar-1=C:\\Users\\XT\\Desktop\\JAVA_driver\\sqljdbc4.jar
 user.properties.file=C:\\Users\\XT\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
